#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[workspace]
members = [
  "zenoh-flow-python",
  "zenoh-flow-python-commons",
  "zenoh-flow-python-operator-wrapper",
  "zenoh-flow-python-sink-wrapper",
  "zenoh-flow-python-source-wrapper",
]

[workspace.package]
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
categories = ["api-bindings", "dataflow-programming", "network-programming"]
description = "Zenoh-Flow Python APIs"
edition = "2018"
homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
version = "0.5.0-alpha.1"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"

[workspace.dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
async-trait = "0.1"
libloading = "0.7"
log = "0.4"
pyo3 = "0.16"
pyo3-asyncio = { version = "0.16", features = [
  "async-std-runtime",
  "attributes",
] }
pyo3-build-config = { version = "0.16", features = ["resolve-config"] }
zenoh-flow = { version = "0.5.0-alpha.1" }
