#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[workspace]

members = [
  "zenoh-flow-python-operator-wrapper",
  "zenoh-flow-python-sink-wrapper",
  "zenoh-flow-python-source-wrapper",
  "zenoh-flow-python",
  "zenoh-flow-python-commons",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[workspace.dependencies]
anyhow = "1"
async-std = { version = "=1.12.0", features = ["attributes"] }
async-trait = "0.1"
libloading = "0.7"
pyo3 = "0.16"
pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
pyo3-build-config = { version = "0.16", features = ["resolve-config"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zenoh-flow-nodes = { path = "../zenoh-flow/zenoh-flow-nodes" }
