[package]
name = "py-op"
version = "0.2.0"
repository = "https://github.com/atolab/zenoh-flow-examples"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Examples"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
pyo3 = "0.16"
log = "0.4"
libloading = "0.7"

[build-dependencies]
pyo3-build-config = {version = "0.16", features = ["resolve-config"]}

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]

[lib]
name = "py_op"
crate-type=["cdylib"]
path="src/lib.rs"

