[package]
name = "py-sink"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
async-trait = "0.1"
zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
pyo3 = "0.15"
libloading = "0.7"
log = "0.4"

[build-dependencies]
pyo3-build-config = {version = "0.15", features = ["resolve-config"]}

[features]
abi-py36 = ["pyo3/abi3-py36"]
default = ["abi-py36"]

[lib]
name = "py_sink"
crate-type=["cdylib"]
path="src/lib.rs"
