[package]
name = "py-source"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
async-trait = "0.1"
zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
pyo3 = "0.15"

[features]
abi-py36 = ["pyo3/abi3-py36"]
default = ["abi-py36"]

[lib]
name = "py_source"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "py_source"
kind = "source"
outputs=[ {id ="Data", type="bytes"}]

