[package]
name = "py-source"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
async-trait = "0.1"
zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
pyo3 = "0.16"
libloading = "0.7"
log = "0.4"

[build-dependencies]
pyo3-build-config = {version = "0.16", features = ["resolve-config"]}

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]

[lib]
name = "py_source"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "py_source"
kind = "source"
outputs=[ {id ="Data", type="bytes"}]

