#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "py-source"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0"}
async-trait = "0.1"
zenoh-flow-python-common = {path = "../zenoh-flow-python-common/"}
pyo3 = "0.16"
pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
libloading = "0.7"
log = "0.4"

[build-dependencies]
pyo3-build-config = {version = "0.16", features = ["resolve-config"]}

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]

[lib]
name = "py_source"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "py_source"
kind = "source"
outputs=[ {id ="Data", type="bytes"}]
