#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow-python-common"
version = "0.4.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
flume = "0.10"
log = "0.4"
pyo3 = "0.16"
pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
uhlc = "0.5"
uuid = "1.1"
zenoh-flow = "0.4.0"
[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]

#[lib]
#name = "zenoh_flow_python_common"
#crate-type=["dylib"]
#path="src/lib.rs"
