#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description = "Zenoh-Flow Python common types and utility functions."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-python-commons"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-std = { workspace = true }
flume = "0.10"
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
uhlc = "0.5"
uuid = "1.1"
zenoh-flow = { workspace = true }

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]
