#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow-python-commons"
version = "0.5.0-alpha.1"
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
categories = ["network-programming", "api-bindings"]
description = "Zenoh-Flow Python common types and utility functions."
edition = "2018"
homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
flume = "0.10"
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
serde_json = { workspace = true }
uhlc = "0.5"
uuid = "1.1"
zenoh-flow-nodes = { workspace = true }

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]
