#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description = "Zenoh-Flow Python Sink wrapper"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-python-sink-wrapper"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
zenoh-flow = { workspace = true }
zenoh-flow-python-commons = { version = "0.5.0-alpha.2", path = "../zenoh-flow-python-commons/" }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]

[lib]
crate-type = ["cdylib"]
name = "zenoh_flow_python_sink_wrapper"
path = "src/lib.rs"

[package.metadata.deb]
assets = [
  # library
  [
    "/var/zenoh-flow/python/libzenoh_flow_python_sink_wrapper.so",
    "644",
    "target/release/libzenoh_flow_python_sink_wrapper.so",
  ],
]
copyright = "2021 - 2023 ZettaScale Technology"
depends = "$auto"
license-file = ["../LICENSE", "0"]
maintainer = "ZettaScale Zenoh Team, <zenoh@zettascale.tech>"
name = "zenoh-flow-python-sink-wrapper"
section = "libraries"
