#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow-python-source-wrapper"
version = "0.4.0-alpha.2"
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
categories = ["network-programming"]
description = "Zenoh-Flow Python Source wrapper"
edition = "2018"
homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"

[dependencies]
async-trait = "0.1"
libloading = "0.7"
log = "0.4"
pyo3 = "0.16"
pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }

zenoh-flow = "=0.4.0-alpha.2"
zenoh-flow-python-commons = { version =  "=0.4.0-alpha.2", path = "../zenoh-flow-python-commons/" }

[build-dependencies]
pyo3-build-config = { version = "0.16", features = ["resolve-config"] }

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37"]

[lib]
name = "zenoh_flow_python_source_wrapper"
crate-type =["cdylib"]
path = "src/lib.rs"

[package.metadata.deb]
name = "zenoh-flow-python-source-wrapper"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "libraries"
license-file = ["../LICENSE", "0"]
depends = "$auto"
assets = [
    # library
    ["target/release/libzenoh_flow_python_source_wrapper.so", "/var/zenoh-flow/python/libzenoh_flow_python_source_wrapper.so", "644"],
]