#
# Copyright © 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Python wrapper for a Zenoh-Flow Source node."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-flow-python-source-wrapper"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait.workspace = true
pyo3.workspace = true
pyo3-asyncio.workspace = true
pyo3-pylogger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zenoh-flow-python.workspace = true
zenoh-flow-nodes.workspace = true

[lib]
crate-type = ["cdylib"]
