[package]
name = "zenoh-flow-python-types"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
uhlc = "0.4"
pyo3 = "0.15"


[features]
abi-py36 = ["pyo3/abi3-py36"]
default = ["abi-py36"]

#[lib]
#name = "zenoh_flow_python_types"
#crate-type=["dylib"]
#path="src/lib.rs"