#
# Copyright (c) 2021 - 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "zenoh-flow-python"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
pyo3 = { workspace = true }
zenoh-flow-python-commons = { version = "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }

[features]
abi-py37 = ["pyo3/abi3-py37"]
default = ["abi-py37", "extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
crate-type = ["cdylib"]
name = "zenoh_flow"
