#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-flow-python"
version = "0.5.0-alpha.1"
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
categories = ["network-programming", "api-bindings"]
description = "Zenoh-Flow  Python APIs"
edition = "2018"
homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
license = " EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"


[dependencies]
pyo3 = { workspace = true }
zenoh-flow-python-commons = { path = "../zenoh-flow-python-commons/" }

[features]
abi-py37 = ["pyo3/abi3-py37"]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "abi-py37"]

[lib]
name = "zenoh_flow"
crate-type = ["cdylib"]
