#
# Copyright © 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Zenoh-Flow Python bindings core library."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-flow-python"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
zenoh-flow-nodes = { workspace = true }

[features]
extension-module = ["pyo3/extension-module"]

[lib]
name = "zenoh_flow_python"
crate-type = ["cdylib", "rlib"]
