#
#
# Copyright © 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
author = "ZettaScale Zenoh team"
author_email = "zenoh@zettascale.tech"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
description = "Eclipse Zenoh-Flow Python bindings."
dynamic = ["version"]
name = "zenoh-flow-python"
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
"Bug Tracker" = "https://github.com/eclipse-zenoh-flow/zenoh-flow-python/issues"
"Source Code" = "https://github.com/eclipse-zenoh-flow/zenoh-flow-python"
